205. Exploring what happens when we batch and prefetch our data

--- a/07_milestone_proj_1_food_vision_big.ipynb
+++ b/07_milestone_proj_1_food_vision_big.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "07_milestone_proj_1_food_vision_big",
       "provenance": [],
-      "authorship_tag": "ABX9TyNye6ZhCLKM5WlxQrfZUXZB",
+      "authorship_tag": "ABX9TyMwcTYkp75RxovStdHr3242",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -762,11 +762,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0RnNoFzU2Qrt",
-        "outputId": "95e4c9b7-7f6e-404f-a6c0-57d9ead10191",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0RnNoFzU2Qrt",
+        "outputId": "95e4c9b7-7f6e-404f-a6c0-57d9ead10191"
       },
       "source": [
         "train_data, test_data"
@@ -787,6 +787,26 @@
           "execution_count": 51
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1zjF-m3l2caM"
+      },
+      "source": [
+        "> \"Hey Tensorflow, map this preprocessing function(`preprocess_img`) across our training dataset, then shuffle a number of elements and then batch them together and finally make sure you prepare new batches(prefetch) whilst the model is looking through (finding patterns) the current batch.\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Q8d2Z4W03whD"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
