206. Creating modelling callbacks for our feature extraction model

--- a/07_milestone_proj_1_food_vision_big.ipynb
+++ b/07_milestone_proj_1_food_vision_big.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "07_milestone_proj_1_food_vision_big",
       "provenance": [],
-      "authorship_tag": "ABX9TyMwcTYkp75RxovStdHr3242",
+      "authorship_tag": "ABX9TyP9eCr4uOx+8zTwsh+fYzpN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -766,12 +766,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0RnNoFzU2Qrt",
-        "outputId": "95e4c9b7-7f6e-404f-a6c0-57d9ead10191"
+        "outputId": "6dc61afb-0ddb-48d3-cf3b-00145ff9b9c9"
       },
       "source": [
         "train_data, test_data"
       ],
-      "execution_count": 51,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -784,7 +784,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 51
+          "execution_count": 52
         }
       ]
     },
@@ -798,9 +798,42 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "Q8d2Z4W03whD"
+      },
+      "source": [
+        "## Create modelling callbacks\n",
+        "\n",
+        "We're going to create a couple of callbacks to help us while our model trains :\n",
+        "* TensorBoard callback to log training results(so we can visualize them later if need be)\n",
+        "* ModelCheckpoint callback to save our model's progress after feature extraction"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Rrgzxmud57ce"
+      },
+      "source": [
+        "# Create tensorboard callback (import from helper_functions.py)\n",
+        "from helper_functions import create_tensorboard_callback\n",
+        "\n",
+        "# Create ModelCheckpoint callback to save a model's progress during training\n",
+        "checkpoint_path = \"model_checkpoints/cp.ckpt\"\n",
+        "model_checkpoint = tf.keras.callbacks.ModelCheckpoint(filepath=checkpoint_path, \n",
+        "                                                      monitor=\"val_acc\",\n",
+        "                                                      save_best_only=True,\n",
+        "                                                      save_weights_only=True,\n",
+        "                                                      verbose=0) # don't print whether or not model is being saved"
+      ],
+      "execution_count": 57,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qQ0coQ4l85GV"
       },
       "source": [
         ""
