208. Turning on mixed precision training with TensorFlow

--- a/07_milestone_proj_1_food_vision_big.ipynb
+++ b/07_milestone_proj_1_food_vision_big.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "07_milestone_proj_1_food_vision_big",
       "provenance": [],
-      "authorship_tag": "ABX9TyP9eCr4uOx+8zTwsh+fYzpN",
+      "authorship_tag": "ABX9TyM/A2DRO6lC1poUqlY+q6Uf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -827,13 +827,61 @@
         "                                                      save_weights_only=True,\n",
         "                                                      verbose=0) # don't print whether or not model is being saved"
       ],
-      "execution_count": 57,
+      "execution_count": 59,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qQ0coQ4l85GV"
+      },
+      "source": [
+        "## Setup mixed precision training\n",
+        "\n",
+        "First and foremost, for a deeper understanding of mixed precision training, check out the TensorFlow guide for mixed precision:\n",
+        "https://www.tensorflow.org/guide/mixed_precision\n",
+        "\n",
+        "Mixed precision utilizes a combination of float32 and float16 data types to speed upi model performance."
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qQ0coQ4l85GV"
+        "id": "yt_kMFOq_0Wv",
+        "outputId": "85a833dd-c13c-465a-a9d7-b5cfcd11d867",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Turn on mixed precision training\n",
+        "from tensorflow.keras import mixed_precision\n",
+        "mixed_precision.set_global_policy(\"mixed_float16\") # set global data policy to mixed precision"
+      ],
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Mixed precision compatibility check (mixed_float16): OK\n",
+            "Your GPU will likely run quickly with dtype policy mixed_float16 as it has compute capability of at least 7.0. Your GPU: Tesla T4, compute capability 7.5\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Mixed precision compatibility check (mixed_float16): OK\n",
+            "Your GPU will likely run quickly with dtype policy mixed_float16 as it has compute capability of at least 7.0. Your GPU: Tesla T4, compute capability 7.5\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9Zf3OwijCXXp"
       },
       "source": [
         ""
