208. Turning on mixed precision training with TensorFlow

--- a/07_milestone_proj_1_food_vision_big.ipynb
+++ b/07_milestone_proj_1_food_vision_big.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "07_milestone_proj_1_food_vision_big",
       "provenance": [],
-      "authorship_tag": "ABX9TyM/A2DRO6lC1poUqlY+q6Uf",
+      "authorship_tag": "ABX9TyO/VlPlXz6VsShauORy7V6a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -847,11 +847,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yt_kMFOq_0Wv",
-        "outputId": "85a833dd-c13c-465a-a9d7-b5cfcd11d867",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yt_kMFOq_0Wv",
+        "outputId": "85a833dd-c13c-465a-a9d7-b5cfcd11d867"
       },
       "source": [
         "# Turn on mixed precision training\n",
@@ -881,7 +881,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9Zf3OwijCXXp"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9Zf3OwijCXXp",
+        "outputId": "a0909076-e05d-4d66-9262-6d767ba3ffe5"
+      },
+      "source": [
+        "mixed_precision.global_policy()"
+      ],
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<Policy \"mixed_float16\">"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 62
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nW4t_8BCDZZ6"
       },
       "source": [
         ""
