210. Checking to see if our model is using mixed precision training layer by layer

--- a/07_milestone_proj_1_food_vision_big.ipynb
+++ b/07_milestone_proj_1_food_vision_big.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "07_milestone_proj_1_food_vision_big",
       "provenance": [],
-      "authorship_tag": "ABX9TyNdH+ZCWs9XoUDN/7kN327n",
+      "authorship_tag": "ABX9TyPexcC7y7BQ3QGRBIkBRJFB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1822,12 +1822,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fTo5TfGEhxkK",
-        "outputId": "5527d767-62a2-4956-bea5-db1d99624cdb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "fTo5TfGEhxkK",
+        "outputId": "5527d767-62a2-4956-bea5-db1d99624cdb"
       },
       "source": [
         "import tensorflow as tf\n",
@@ -1878,12 +1878,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W4f0cU0pmRaa",
-        "outputId": "268bbc9b-a0f2-400d-c6de-d5a1915d66e1"
+        "outputId": "ba691fc8-b8d9-4266-fadc-be422a5b5748"
       },
       "source": [
         "! nvidia-smi -L"
       ],
-      "execution_count": 6,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -2877,10 +2877,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "yt_kMFOq_0Wv",
-        "outputId": "d567b62b-f9a9-4031-8d54-3bd061aba150",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d567b62b-f9a9-4031-8d54-3bd061aba150"
       },
       "source": [
         "# Turn on mixed precision training\n",
@@ -2914,12 +2914,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9Zf3OwijCXXp",
-        "outputId": "c638c62d-fd6e-4a6f-bb6b-0236f1714426"
+        "outputId": "ce6affb7-9938-4057-fa89-796a18ba6992"
       },
       "source": [
         "mixed_precision.global_policy()"
       ],
-      "execution_count": 26,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2931,7 +2931,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 26
+          "execution_count": 39
         }
       ]
     },
@@ -3014,10 +3014,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "SSOoIM6ZdVYh",
-        "outputId": "a4bb4321-790f-4dcf-d861-c12d47a96b23",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a4bb4321-790f-4dcf-d861-c12d47a96b23"
       },
       "source": [
         "model.summary()"
@@ -3049,6 +3049,140 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jBOqLzwToNFg"
+      },
+      "source": [
+        "## Checking layer dtype policies (are we using mixed precision?)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RQbKYlwxofck",
+        "outputId": "6a37215a-27e4-4026-ecc4-f74cda942427",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Check the dtype policy attributes of layers in our model.\n",
+        "for layer in model.layers :\n",
+        "  print(layer.name, layer.trainable, layer.dtype, layer.dtype_policy)"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "input_layer True float32 <Policy \"float32\">\n",
+            "efficientnetb0 False float32 <Policy \"mixed_float16\">\n",
+            "global_average_pooling2d_2 True float32 <Policy \"mixed_float16\">\n",
+            "dense_2 True float32 <Policy \"mixed_float16\">\n",
+            "softmax_float32 True float32 <Policy \"float32\">\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "V7istKJZpGMG"
+      },
+      "source": [
+        "Going through the above we see :\n",
+        "* `layer.name` : the human readable name of a particular layer\n",
+        "* `layer.trainable` : is the layer trainable or not? if(`False`, the weights are frozen)\n",
+        "* `layer.dtype` : the data type a layer stores its variables in \n",
+        "* `layer.dtype_policy` : the data type policy a layer computes on its variables"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fI9IOdhXqIxR",
+        "outputId": "cd64430b-2999-4452-c880-e336fe339ce1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Check the dtype_policy attributes of layers in the base model\n",
+        "for i, layer in enumerate(model.layers[1].layers[:20]) : # Check the layers of the base model (layer at index 1)\n",
+        "  print (i, layer.name, layer.trainable, layer.dtype, layer.dtype_policy)"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0 input_4 False float32 <Policy \"float32\">\n",
+            "1 rescaling_3 False float32 <Policy \"mixed_float16\">\n",
+            "2 normalization_3 False float32 <Policy \"float32\">\n",
+            "3 stem_conv_pad False float32 <Policy \"mixed_float16\">\n",
+            "4 stem_conv False float32 <Policy \"mixed_float16\">\n",
+            "5 stem_bn False float32 <Policy \"mixed_float16\">\n",
+            "6 stem_activation False float32 <Policy \"mixed_float16\">\n",
+            "7 block1a_dwconv False float32 <Policy \"mixed_float16\">\n",
+            "8 block1a_bn False float32 <Policy \"mixed_float16\">\n",
+            "9 block1a_activation False float32 <Policy \"mixed_float16\">\n",
+            "10 block1a_se_squeeze False float32 <Policy \"mixed_float16\">\n",
+            "11 block1a_se_reshape False float32 <Policy \"mixed_float16\">\n",
+            "12 block1a_se_reduce False float32 <Policy \"mixed_float16\">\n",
+            "13 block1a_se_expand False float32 <Policy \"mixed_float16\">\n",
+            "14 block1a_se_excite False float32 <Policy \"mixed_float16\">\n",
+            "15 block1a_project_conv False float32 <Policy \"mixed_float16\">\n",
+            "16 block1a_project_bn False float32 <Policy \"mixed_float16\">\n",
+            "17 block2a_expand_conv False float32 <Policy \"mixed_float16\">\n",
+            "18 block2a_expand_bn False float32 <Policy \"mixed_float16\">\n",
+            "19 block2a_expand_activation False float32 <Policy \"mixed_float16\">\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UtAwFJXgrDns",
+        "outputId": "a0dc5f82-d5f4-47e5-c529-a190a8903005",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "mixed_precision.global_policy()"
+      ],
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<Policy \"mixed_float16\">"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VHngbdm2q4kb"
+      },
+      "source": [
+        "#mixed_precision.set_global_policy(\"float32\")"
+      ],
+      "execution_count": 47,
+      "outputs": []
     }
   ]
 }
