--- a/07_milestone_proj_1_food_vision_big.ipynb
+++ b/07_milestone_proj_1_food_vision_big.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "07_milestone_proj_1_food_vision_big",
       "provenance": [],
-      "authorship_tag": "ABX9TyPexcC7y7BQ3QGRBIkBRJFB",
+      "authorship_tag": "ABX9TyNX/yfunaoHjaGaoeh+RdBf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3062,11 +3062,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RQbKYlwxofck",
-        "outputId": "6a37215a-27e4-4026-ecc4-f74cda942427",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RQbKYlwxofck",
+        "outputId": "6a37215a-27e4-4026-ecc4-f74cda942427"
       },
       "source": [
         "# Check the dtype policy attributes of layers in our model.\n",
@@ -3104,11 +3104,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fI9IOdhXqIxR",
-        "outputId": "cd64430b-2999-4452-c880-e336fe339ce1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fI9IOdhXqIxR",
+        "outputId": "cd64430b-2999-4452-c880-e336fe339ce1"
       },
       "source": [
         "# Check the dtype_policy attributes of layers in the base model\n",
@@ -3148,11 +3148,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UtAwFJXgrDns",
-        "outputId": "a0dc5f82-d5f4-47e5-c529-a190a8903005",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UtAwFJXgrDns",
+        "outputId": "a0dc5f82-d5f4-47e5-c529-a190a8903005"
       },
       "source": [
         "mixed_precision.global_policy()"
@@ -3182,6 +3182,80 @@
         "#mixed_precision.set_global_policy(\"float32\")"
       ],
       "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rrpjIppisPM5"
+      },
+      "source": [
+        "## Fit the feature extraction model\n",
+        "\n",
+        "If our goal is to fine-tune a pretrained model, the general order of doing things is :\n",
+        "1. Build a feature extraction model (train a couple output layers with base layers frozen)\n",
+        "2. Fine-tune some of the frozen layers"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LRp443JmrVST",
+        "outputId": "b64ebe15-6f82-4f23-c940-1a437b71b288",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Fit the feature extraction model with callbacks\n",
+        "history_101_food_classes_feature_extract = model.fit(train_data,\n",
+        "                                                     epochs=3,\n",
+        "                                                     steps_per_epoch=len(test_data),\n",
+        "                                                     validation_data=test_data,\n",
+        "                                                     validation_steps=int(0.15 * len(test_data)),\n",
+        "                                                     callbacks=[create_tensorboard_callback(dir_name=\"training_logs\",\n",
+        "                                                                                            experiment_name=\"efficientnetb0_101_classes_all_data_feature_extract\"),\n",
+        "                                                                model_checkpoint\n",
+        "                                                                ])"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Saving TensorBoard log files to: training_logs/efficientnetb0_101_classes_all_data_feature_extract/20210730-231938\n",
+            "Epoch 1/3\n",
+            "790/790 [==============================] - 117s 99ms/step - loss: 2.9884 - accuracy: 0.3457 - val_loss: 1.5249 - val_accuracy: 0.6118\n",
+            "WARNING:tensorflow:Can save best model only with val_acc available, skipping.\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:Can save best model only with val_acc available, skipping.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 2/3\n",
+            "591/790 [=====================>........] - ETA: 14s - loss: 1.6949 - accuracy: 0.5815"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mnsMnlggt5Cb"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
       "outputs": []
     }
   ]
