211. Training and evaluating a feature extraction model (Food Vision Big™)

--- a/07_milestone_proj_1_food_vision_big.ipynb
+++ b/07_milestone_proj_1_food_vision_big.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "07_milestone_proj_1_food_vision_big",
       "provenance": [],
-      "authorship_tag": "ABX9TyNX/yfunaoHjaGaoeh+RdBf",
+      "authorship_tag": "ABX9TyP/+fb3H9ecqKsxyMVZFOq3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3200,11 +3200,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LRp443JmrVST",
-        "outputId": "b64ebe15-6f82-4f23-c940-1a437b71b288",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LRp443JmrVST",
+        "outputId": "b64ebe15-6f82-4f23-c940-1a437b71b288"
       },
       "source": [
         "# Fit the feature extraction model with callbacks\n",
@@ -3218,7 +3218,7 @@
         "                                                                model_checkpoint\n",
         "                                                                ])"
       ],
-      "execution_count": null,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
@@ -3241,16 +3241,87 @@
           "output_type": "stream",
           "text": [
             "Epoch 2/3\n",
-            "591/790 [=====================>........] - ETA: 14s - loss: 1.6949 - accuracy: 0.5815"
+            "790/790 [==============================] - 64s 81ms/step - loss: 1.6870 - accuracy: 0.5827 - val_loss: 1.3158 - val_accuracy: 0.6584\n",
+            "WARNING:tensorflow:Can save best model only with val_acc available, skipping.\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:Can save best model only with val_acc available, skipping.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 3/3\n",
+            "788/790 [============================>.] - ETA: 0s - loss: 1.5102 - accuracy: 0.6137WARNING:tensorflow:Your input ran out of data; interrupting training. Make sure that your dataset or generator can generate at least `steps_per_epoch * epochs` batches (in this case, 2370 batches). You may need to use the repeat() function when building your dataset.\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:Your input ran out of data; interrupting training. Make sure that your dataset or generator can generate at least `steps_per_epoch * epochs` batches (in this case, 2370 batches). You may need to use the repeat() function when building your dataset.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\r790/790 [==============================] - 61s 77ms/step - loss: 1.5102 - accuracy: 0.6137 - val_loss: 1.2348 - val_accuracy: 0.6729\n",
+            "WARNING:tensorflow:Can save best model only with val_acc available, skipping.\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:Can save best model only with val_acc available, skipping.\n"
+          ],
+          "name": "stderr"
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mnsMnlggt5Cb"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mnsMnlggt5Cb",
+        "outputId": "1ca46a32-eefc-4f72-f3e6-464a9d035b80"
+      },
+      "source": [
+        "# Evaluate mode on whole test data set\n",
+        "results_feature_extract_model = model.evaluate(test_data)"
+      ],
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "790/790 [==============================] - 55s 70ms/step - loss: 1.2333 - accuracy: 0.6758\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zct5Yv1Ju_gT"
+      },
+      "source": [
+        "## Off to you ..."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "leBqS-EavFua"
       },
       "source": [
         ""
