#212 Start milestone on other sheet

--- a/07_milestone_proj_1_food_vision_big.ipynb
+++ b/07_milestone_proj_1_food_vision_big.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "07_milestone_proj_1_food_vision_big",
       "provenance": [],
-      "authorship_tag": "ABX9TyP/+fb3H9ecqKsxyMVZFOq3",
+      "authorship_tag": "ABX9TyMIPG+DUywidizRr7XlMa7N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3007,7 +3007,7 @@
         "              metrics=[\"accuracy\"])\n",
         "\n"
       ],
-      "execution_count": 32,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -3315,7 +3315,13 @@
         "id": "zct5Yv1Ju_gT"
       },
       "source": [
-        "## Off to you ..."
+        "## Off to you ...\n",
+        "\n",
+        "We've covered a lot of ground so far but since this is a milestone project, it's time for you to takeover.\n",
+        "\n",
+        "More specifically, you're challenge is to complete the TEMPLATE version of 07 to obtain a computer vision model (building off the one we've build in this notebook) to beat the DeepFood paper.\n",
+        "\n",
+        "In other words, you're going to create Food Vision Big!!!"
       ]
     },
     {
