--- a/TEMPLATE_07_food_vision_milestone_project_1.ipynb
+++ b/TEMPLATE_07_food_vision_milestone_project_1.ipynb
@@ -5311,14 +5311,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e43503de-e915-47dc-ac62-11fad6849ccb"
+        "outputId": "a0329520-076b-4383-8dc8-1b48660557c9"
       },
       "source": [
         "# Check to see what dtype_policy of the layers in your loaded model are\n",
         "for layer in gs_mixed_precision_model.layers :\n",
         "  print(layer.name, layer.trainable, layer.dtype, layer.dtype_policy)\n"
       ],
-      "execution_count": 66,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
@@ -5336,6 +5336,50 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "FDx_gdhjmbtc",
+        "outputId": "e5d8621a-eb05-402f-efb6-7a03e246071a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Check the layers in the base model and see what dtype policy they're using\n",
+        "for layer in gs_mixed_precision_model.layers[1].layers[:20]:\n",
+        "  print(layer.name, layer.trainable, layer.dtype, layer.dtype_policy)"
+      ],
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "input_1 True float32 <Policy \"float32\">\n",
+            "rescaling True float32 <Policy \"mixed_float16\">\n",
+            "normalization True float32 <Policy \"float32\">\n",
+            "stem_conv_pad True float32 <Policy \"mixed_float16\">\n",
+            "stem_conv True float32 <Policy \"mixed_float16\">\n",
+            "stem_bn True float32 <Policy \"mixed_float16\">\n",
+            "stem_activation True float32 <Policy \"mixed_float16\">\n",
+            "block1a_dwconv True float32 <Policy \"mixed_float16\">\n",
+            "block1a_bn True float32 <Policy \"mixed_float16\">\n",
+            "block1a_activation True float32 <Policy \"mixed_float16\">\n",
+            "block1a_se_squeeze True float32 <Policy \"mixed_float16\">\n",
+            "block1a_se_reshape True float32 <Policy \"mixed_float16\">\n",
+            "block1a_se_reduce True float32 <Policy \"mixed_float16\">\n",
+            "block1a_se_expand True float32 <Policy \"mixed_float16\">\n",
+            "block1a_se_excite True float32 <Policy \"mixed_float16\">\n",
+            "block1a_project_conv True float32 <Policy \"mixed_float16\">\n",
+            "block1a_project_bn True float32 <Policy \"mixed_float16\">\n",
+            "block2a_expand_conv True float32 <Policy \"mixed_float16\">\n",
+            "block2a_expand_bn True float32 <Policy \"mixed_float16\">\n",
+            "block2a_expand_activation True float32 <Policy \"mixed_float16\">\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "GcKFVlXVwjJy"
       },
       "source": [
@@ -5344,14 +5388,24 @@
         "# See: https://www.tensorflow.org/api_docs/python/tf/keras/callbacks/EarlyStopping for more\n",
         "# YOUR_CODE_HERE\n",
         "\n",
+        "early_stopping_callback = tf.keras.callbacks.EarlyStopping(monitor=\"val_loss\", \n",
+        "                                                           patience=3)\n",
         "\n",
         "# Create ModelCheckpoint callback to save best model during fine-tuning\n",
         "# Save the best model only\n",
         "# Monitor val_loss while training and save the best model (lowest val_loss)\n",
         "# See: https://www.tensorflow.org/api_docs/python/tf/keras/callbacks/ModelCheckpoint for more\n",
-        "# YOUR_CODE_HERE\n"
+        "# YOUR_CODE_HERE\n",
+        "\n",
+        "checkpoint_path=\"model_checkpoints/gs_cp.ckpt\"\n",
+        "model_checkpoint = tf.keras.callbacks.ModelCheckpoint(checkpoint_path,\n",
+        "                                                      monitor=\"val_loss\",  # save the model weights with best validation loss\n",
+        "                                                      save_best_only=True,  # only save the best weights\n",
+        "                                                      save_weights_only=True,  # only save model weights(not whole model)\n",
+        "                                                      verbose=0 # don't print out whether or not model is being saved\n",
+        "                                                      )"
       ],
-      "execution_count": 44,
+      "execution_count": 69,
       "outputs": []
     },
     {
