before running the fit

--- a/TEMPLATE_07_food_vision_milestone_project_1.ipynb
+++ b/TEMPLATE_07_food_vision_milestone_project_1.ipynb
@@ -5336,11 +5336,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FDx_gdhjmbtc",
-        "outputId": "e5d8621a-eb05-402f-efb6-7a03e246071a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FDx_gdhjmbtc",
+        "outputId": "e5d8621a-eb05-402f-efb6-7a03e246071a"
       },
       "source": [
         "# Check the layers in the base model and see what dtype policy they're using\n",
@@ -5388,8 +5388,8 @@
         "# See: https://www.tensorflow.org/api_docs/python/tf/keras/callbacks/EarlyStopping for more\n",
         "# YOUR_CODE_HERE\n",
         "\n",
-        "early_stopping_callback = tf.keras.callbacks.EarlyStopping(monitor=\"val_loss\", \n",
-        "                                                           patience=3)\n",
+        "early_stopping_callback = tf.keras.callbacks.EarlyStopping(monitor=\"val_loss\",  # monitor validation loss\n",
+        "                                                           patience=3)  # if val loss increases for 3 epochs in a row, stop training.\n",
         "\n",
         "# Create ModelCheckpoint callback to save best model during fine-tuning\n",
         "# Save the best model only\n",
@@ -5405,7 +5405,7 @@
         "                                                      verbose=0 # don't print out whether or not model is being saved\n",
         "                                                      )"
       ],
-      "execution_count": 69,
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -5416,7 +5416,10 @@
       "source": [
         "# Compile the model ready for fine-tuning\n",
         "# Use the Adam optimizer with a 10x lower than default learning rate\n",
-        "# YOUR_CODE_HERE\n"
+        "gs_mixed_precision_model.compile(loss=\"sparse_categorical_crossentropy\", # as the labels are not *one-hot* encoded\n",
+        "                                 optimizer=tf.keras.optimizers.Adam(learning_rate=0.0001), # 10x lower than default learning rate\n",
+        "                                 metrics=[\"accuracy\"])\n",
+        "\n"
       ],
       "execution_count": 45,
       "outputs": []
@@ -5431,7 +5434,15 @@
         "# Use 100 epochs as the default\n",
         "# Validate on 15% of the test_data\n",
         "# Use the create_tensorboard_callback, ModelCheckpoint and EarlyStopping callbacks you created eaelier\n",
-        "# YOUR_CODE_HERE\n"
+        "gs_mixed_precision_model.fit(train_data, \n",
+        "                             epochs=100, # 100 epochs\n",
+        "                             steps_per_epoch=len(test_data),\n",
+        "                             validation_data=test_data,\n",
+        "                             validation_steps=int(0.15 * len(test_data)), # 15% of available test_data\n",
+        "                             callbacks=[create_tensorboard_callback(dir_name=\"training_logs\",\n",
+        "                                                                    experiment_name=\"efficientnetb0_101_food_classes_all_data_fine_tuning\"),\n",
+        "                                        model_checkpoint,\n",
+        "                                        early_stopping_callback])"
       ],
       "execution_count": 46,
       "outputs": []
