--- a/TEMPLATE_07_food_vision_milestone_project_1.ipynb
+++ b/TEMPLATE_07_food_vision_milestone_project_1.ipynb
@@ -5340,14 +5340,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FDx_gdhjmbtc",
-        "outputId": "e5d8621a-eb05-402f-efb6-7a03e246071a"
+        "outputId": "2809d19c-0f05-400c-d9c5-99771673c476"
       },
       "source": [
         "# Check the layers in the base model and see what dtype policy they're using\n",
         "for layer in gs_mixed_precision_model.layers[1].layers[:20]:\n",
         "  print(layer.name, layer.trainable, layer.dtype, layer.dtype_policy)"
       ],
-      "execution_count": 68,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "stream",
@@ -5405,7 +5405,7 @@
         "                                                      verbose=0 # don't print out whether or not model is being saved\n",
         "                                                      )"
       ],
-      "execution_count": 70,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -5421,31 +5421,45 @@
         "                                 metrics=[\"accuracy\"])\n",
         "\n"
       ],
-      "execution_count": 45,
+      "execution_count": 79,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LkUtOdVkbMPC"
+        "id": "LkUtOdVkbMPC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d6cf17f7-3b16-4093-e77b-7be4b2f68631"
       },
       "source": [
         "# Start to fine-tune (all layers)\n",
         "# Use 100 epochs as the default\n",
         "# Validate on 15% of the test_data\n",
         "# Use the create_tensorboard_callback, ModelCheckpoint and EarlyStopping callbacks you created eaelier\n",
-        "gs_mixed_precision_model.fit(train_data, \n",
-        "                             epochs=100, # 100 epochs\n",
-        "                             steps_per_epoch=len(test_data),\n",
-        "                             validation_data=test_data,\n",
-        "                             validation_steps=int(0.15 * len(test_data)), # 15% of available test_data\n",
-        "                             callbacks=[create_tensorboard_callback(dir_name=\"training_logs\",\n",
-        "                                                                    experiment_name=\"efficientnetb0_101_food_classes_all_data_fine_tuning\"),\n",
-        "                                        model_checkpoint,\n",
-        "                                        early_stopping_callback])"
+        "history_101_food_clases_all_data_fine_tune = gs_mixed_precision_model.fit(train_data, \n",
+        "                                                                          epochs=100, # 100 epochs\n",
+        "                                                                          steps_per_epoch=len(test_data),\n",
+        "                                                                          validation_data=test_data,\n",
+        "                                                                          validation_steps=int(0.15 * len(test_data)), # 15% of available test_data\n",
+        "                                                                          callbacks=[create_tensorboard_callback(dir_name=\"training_logs\",\n",
+        "                                                                                                                  experiment_name=\"efficientnetb0_101_food_classes_all_data_fine_tuning\"),\n",
+        "                                                                                      model_checkpoint,\n",
+        "                                                                                      early_stopping_callback])"
       ],
-      "execution_count": 46,
-      "outputs": []
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Saving TensorBoard log files to: training_logs/efficientnetb0_101_food_classes_all_data_fine_tuning/20210803-063028\n",
+            "Epoch 1/100\n",
+            " 92/790 [==>...........................] - ETA: 1:54 - loss: 2.0366 - accuracy: 0.5442"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
