--- a/TEMPLATE_07_food_vision_milestone_project_1.ipynb
+++ b/TEMPLATE_07_food_vision_milestone_project_1.ipynb
@@ -2209,7 +2209,7 @@
         "id": "ClXZDWng-s8F",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 367,
+          "height": 347,
           "referenced_widgets": [
             "146a917c0f6045039e948ea6d6596a35",
             "d4e18a9c14744b879b8017db0b3d7da5",
@@ -4605,27 +4605,27 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8cb2866c-ab53-483a-d487-43c5bc2d5160"
+        "outputId": "9ae9886d-099c-4225-c979-6f20220eb8c6"
       },
       "source": [
         "# Download the saved model from Google Storage\n",
         "!wget https://storage.googleapis.com/ztm_tf_course/food_vision/07_efficientnetb0_feature_extract_model_mixed_precision.zip "
       ],
-      "execution_count": 56,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2021-08-03 05:47:37--  https://storage.googleapis.com/ztm_tf_course/food_vision/07_efficientnetb0_feature_extract_model_mixed_precision.zip\n",
-            "Resolving storage.googleapis.com (storage.googleapis.com)... 142.251.2.128, 142.250.101.128, 142.250.141.128, ...\n",
-            "Connecting to storage.googleapis.com (storage.googleapis.com)|142.251.2.128|:443... connected.\n",
+            "--2021-08-03 06:37:41--  https://storage.googleapis.com/ztm_tf_course/food_vision/07_efficientnetb0_feature_extract_model_mixed_precision.zip\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 142.250.101.128, 142.250.141.128, 142.251.2.128, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|142.250.101.128|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 16976857 (16M) [application/zip]\n",
-            "Saving to: ‘07_efficientnetb0_feature_extract_model_mixed_precision.zip.1’\n",
+            "Saving to: ‘07_efficientnetb0_feature_extract_model_mixed_precision.zip’\n",
             "\n",
-            "\r          07_effici   0%[                    ]       0  --.-KB/s               \r07_efficientnetb0_f 100%[===================>]  16.19M  --.-KB/s    in 0.1s    \n",
+            "07_efficientnetb0_f 100%[===================>]  16.19M  54.2MB/s    in 0.3s    \n",
             "\n",
-            "2021-08-03 05:47:38 (149 MB/s) - ‘07_efficientnetb0_feature_extract_model_mixed_precision.zip.1’ saved [16976857/16976857]\n",
+            "2021-08-03 06:37:42 (54.2 MB/s) - ‘07_efficientnetb0_feature_extract_model_mixed_precision.zip’ saved [16976857/16976857]\n",
             "\n"
           ],
           "name": "stdout"
@@ -4639,14 +4639,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "adf05c69-feac-4cb6-e9b3-4a54496105fd"
+        "outputId": "0dbc4944-637b-44cb-c4ec-12b00a22666e"
       },
       "source": [
         "# Unzip the SavedModel downloaded from Google Stroage\n",
         "!mkdir downloaded_gs_model # create new dir to store downloaded feature extraction model\n",
         "!unzip 07_efficientnetb0_feature_extract_model_mixed_precision.zip -d downloaded_gs_model"
       ],
-      "execution_count": 57,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "stream",
@@ -4671,13 +4671,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "87b23378-5fe6-4c8d-b93b-2754ad1ae237"
+        "outputId": "345cc494-d676-4074-bce6-432eccf0a612"
       },
       "source": [
         "# Load and evaluate downloaded GS model\n",
         "gs_mixed_precision_model = tf.keras.models.load_model(\"downloaded_gs_model/07_efficientnetb0_feature_extract_model_mixed_precision\")"
       ],
-      "execution_count": 62,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "stream",
@@ -5233,13 +5233,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2e86f7f7-85ba-4506-b9a8-2f0647d384df"
+        "outputId": "a34333e3-d46d-4536-c9fa-48d0bea8a464"
       },
       "source": [
         "# Get a summary of the downloaded model\n",
         "gs_mixed_precision_model.summary()"
       ],
-      "execution_count": 63,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "stream",
@@ -5274,18 +5274,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "02ee594b-a05d-4393-87c3-cb21c5c4b976"
+        "outputId": "6c91d12d-2c6e-400c-dad1-69e413370f7c"
       },
       "source": [
         "# How does the loaded model perform? (evaluate it on the test dataset)\n",
         "gs_mixed_precision_model_results = gs_mixed_precision_model.evaluate(test_data)"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "790/790 [==============================] - 50s 61ms/step - loss: 1.0881 - accuracy: 0.7066\n"
+            "554/790 [====================>.........] - ETA: 16s - loss: 1.0841 - accuracy: 0.7067"
           ],
           "name": "stdout"
         }
@@ -5301,81 +5301,34 @@
         "for layer in gs_mixed_precision_model.layers :\n",
         "  layer.trainable = True\n"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xsm5BtWCM5RX",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a0329520-076b-4383-8dc8-1b48660557c9"
+        "id": "xsm5BtWCM5RX"
       },
       "source": [
         "# Check to see what dtype_policy of the layers in your loaded model are\n",
         "for layer in gs_mixed_precision_model.layers :\n",
         "  print(layer.name, layer.trainable, layer.dtype, layer.dtype_policy)\n"
       ],
-      "execution_count": 67,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "input_layer True float32 <Policy \"float32\">\n",
-            "efficientnetb0 True float32 <Policy \"mixed_float16\">\n",
-            "pooling_layer True float32 <Policy \"mixed_float16\">\n",
-            "dense True float32 <Policy \"mixed_float16\">\n",
-            "softmax_float32 True float32 <Policy \"float32\">\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "FDx_gdhjmbtc",
-        "outputId": "2809d19c-0f05-400c-d9c5-99771673c476"
+        "id": "FDx_gdhjmbtc"
       },
       "source": [
         "# Check the layers in the base model and see what dtype policy they're using\n",
         "for layer in gs_mixed_precision_model.layers[1].layers[:20]:\n",
         "  print(layer.name, layer.trainable, layer.dtype, layer.dtype_policy)"
       ],
-      "execution_count": 75,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "input_1 True float32 <Policy \"float32\">\n",
-            "rescaling True float32 <Policy \"mixed_float16\">\n",
-            "normalization True float32 <Policy \"float32\">\n",
-            "stem_conv_pad True float32 <Policy \"mixed_float16\">\n",
-            "stem_conv True float32 <Policy \"mixed_float16\">\n",
-            "stem_bn True float32 <Policy \"mixed_float16\">\n",
-            "stem_activation True float32 <Policy \"mixed_float16\">\n",
-            "block1a_dwconv True float32 <Policy \"mixed_float16\">\n",
-            "block1a_bn True float32 <Policy \"mixed_float16\">\n",
-            "block1a_activation True float32 <Policy \"mixed_float16\">\n",
-            "block1a_se_squeeze True float32 <Policy \"mixed_float16\">\n",
-            "block1a_se_reshape True float32 <Policy \"mixed_float16\">\n",
-            "block1a_se_reduce True float32 <Policy \"mixed_float16\">\n",
-            "block1a_se_expand True float32 <Policy \"mixed_float16\">\n",
-            "block1a_se_excite True float32 <Policy \"mixed_float16\">\n",
-            "block1a_project_conv True float32 <Policy \"mixed_float16\">\n",
-            "block1a_project_bn True float32 <Policy \"mixed_float16\">\n",
-            "block2a_expand_conv True float32 <Policy \"mixed_float16\">\n",
-            "block2a_expand_bn True float32 <Policy \"mixed_float16\">\n",
-            "block2a_expand_activation True float32 <Policy \"mixed_float16\">\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -5405,7 +5358,7 @@
         "                                                      verbose=0 # don't print out whether or not model is being saved\n",
         "                                                      )"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5440,7 +5393,7 @@
         "# Use the create_tensorboard_callback, ModelCheckpoint and EarlyStopping callbacks you created eaelier\n",
         "history_101_food_clases_all_data_fine_tune = gs_mixed_precision_model.fit(train_data, \n",
         "                                                                          epochs=100, # 100 epochs\n",
-        "                                                                          steps_per_epoch=len(test_data),\n",
+        "                                                                          steps_per_epoch=len(train_data),\n",
         "                                                                          validation_data=test_data,\n",
         "                                                                          validation_steps=int(0.15 * len(test_data)), # 15% of available test_data\n",
         "                                                                          callbacks=[create_tensorboard_callback(dir_name=\"training_logs\",\n",
@@ -5448,14 +5401,32 @@
         "                                                                                      model_checkpoint,\n",
         "                                                                                      early_stopping_callback])"
       ],
-      "execution_count": null,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Saving TensorBoard log files to: training_logs/efficientnetb0_101_food_classes_all_data_fine_tuning/20210803-063028\n",
             "Epoch 1/100\n",
-            " 92/790 [==>...........................] - ETA: 1:54 - loss: 2.0366 - accuracy: 0.5442"
+            "790/790 [==============================] - 119s 135ms/step - loss: 1.2317 - accuracy: 0.6858 - val_loss: 0.9309 - val_accuracy: 0.7476\n",
+            "Epoch 2/100\n",
+            "790/790 [==============================] - 101s 128ms/step - loss: 0.9105 - accuracy: 0.7546 - val_loss: 0.8352 - val_accuracy: 0.7683\n",
+            "Epoch 3/100\n",
+            "788/790 [============================>.] - ETA: 0s - loss: 0.8745 - accuracy: 0.7623WARNING:tensorflow:Your input ran out of data; interrupting training. Make sure that your dataset or generator can generate at least `steps_per_epoch * epochs` batches (in this case, 79000 batches). You may need to use the repeat() function when building your dataset.\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:Your input ran out of data; interrupting training. Make sure that your dataset or generator can generate at least `steps_per_epoch * epochs` batches (in this case, 79000 batches). You may need to use the repeat() function when building your dataset.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\r790/790 [==============================] - 102s 129ms/step - loss: 0.8745 - accuracy: 0.7623 - val_loss: 0.7985 - val_accuracy: 0.7789\n"
           ],
           "name": "stdout"
         }
@@ -5467,7 +5438,8 @@
         "id": "K1As0OhYHFX-"
       },
       "source": [
-        "# Save model locally (note: if you're using Google Colab and you save your model locally, it will be deleted when your Google Colab session ends)\n"
+        "# Save model locally (note: if you're using Google Colab and you save your model locally, it will be deleted when your Google Colab session ends)\n",
+        "\n"
       ],
       "execution_count": 47,
       "outputs": []
@@ -5478,7 +5450,8 @@
         "id": "2CR6q8MYM37K"
       },
       "source": [
-        "# Evaluate mixed precision trained fine-tuned model (this should beat DeepFood's 77.4% top-1 accuracy)\n"
+        "# Evaluate mixed precision trained fine-tuned model (this should beat DeepFood's 77.4% top-1 accuracy)\n",
+        "\n"
       ],
       "execution_count": 48,
       "outputs": []
