improved accuracy + tensorboard

--- a/TEMPLATE_07_food_vision_milestone_project_1.ipynb
+++ b/TEMPLATE_07_food_vision_milestone_project_1.ipynb
@@ -5358,7 +5358,7 @@
         "                                                                                     early_stopping_callback,\n",
         "                                                                                     reduce_lr])"
       ],
-      "execution_count": null,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "stream",
@@ -5369,7 +5369,13 @@
             "Epoch 2/100\n",
             "2368/2368 [==============================] - 311s 128ms/step - loss: 0.5965 - accuracy: 0.8356 - val_loss: 0.7778 - val_accuracy: 0.7863\n",
             "Epoch 3/100\n",
-            " 535/2368 [=====>........................] - ETA: 3:46 - loss: 0.3468 - accuracy: 0.9034"
+            "2368/2368 [==============================] - 308s 129ms/step - loss: 0.3280 - accuracy: 0.9078 - val_loss: 0.8563 - val_accuracy: 0.7889\n",
+            "Epoch 4/100\n",
+            "2368/2368 [==============================] - 310s 128ms/step - loss: 0.1714 - accuracy: 0.9507 - val_loss: 1.0081 - val_accuracy: 0.7736\n",
+            "\n",
+            "Epoch 00004: ReduceLROnPlateau reducing learning rate to 1.9999999494757503e-05.\n",
+            "Epoch 5/100\n",
+            "2368/2368 [==============================] - 308s 129ms/step - loss: 0.0522 - accuracy: 0.9879 - val_loss: 1.0146 - val_accuracy: 0.8072\n"
           ],
           "name": "stdout"
         }
@@ -5378,26 +5384,57 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "K1As0OhYHFX-"
+        "id": "K1As0OhYHFX-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "30abdd04-f789-4695-f60f-04eaf44eb7d7"
       },
       "source": [
         "# Save model locally (note: if you're using Google Colab and you save your model locally, it will be deleted when your Google Colab session ends)\n",
         "gs_mixed_precision_model.save(\"drive/MyDrive/tensorflow_course/101_food_classes_fine_tune_milestone_model\")\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 113,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Assets written to: drive/MyDrive/tensorflow_course/101_food_classes_fine_tune_milestone_model/assets\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Assets written to: drive/MyDrive/tensorflow_course/101_food_classes_fine_tune_milestone_model/assets\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2CR6q8MYM37K"
+        "id": "2CR6q8MYM37K",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d814e9bc-ac68-4fdb-c978-3542a8e2d415"
       },
       "source": [
         "# Evaluate mixed precision trained fine-tuned model (this should beat DeepFood's 77.4% top-1 accuracy)\n",
         "results_101_food_classes_fine_tune_milestone_model = gs_mixed_precision_model.evaluate(test_data)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            " 32/790 [>.............................] - ETA: 53s - loss: 1.0288 - accuracy: 0.8027"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -5418,9 +5455,24 @@
         "id": "cCpVz0GSPucB"
       },
       "source": [
-        "# YOUR_CODE_HERE"
+        "# YOUR_CODE_HERE\n",
+        "!tensorboard dev upload --logdir ./training_logs \\\n",
+        "  --name \"Fine-tuning EfficientNetB0 on all Food101 Data\" \\\n",
+        "  --description \"Training results for fine-tuning EfficientNetB0 on Food101 Data with a learning rate of 0.0001\" \\\n",
+        "  --one_shot\n"
       ],
       "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "k_UCEmII8-ot"
+      },
+      "source": [
+        "# View tensorboard here"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
